hphp/hack/test/typecheck/const_attribute/single_const_attribute_subclass.php.exp
File "single_const_attribute_subclass.php", line 19, characters 12-13:
Cannot mutate a __Const property (Typing[4196])
